--- a/MaterialDesignLibrary/src/main/res/values/colors.xml
+++ b/MaterialDesignLibrary/src/main/res/values/colors.xml
@@ -334,4 +334,114 @@
 
     <color name="md_amber_shadow">#85CCBD8F</color>
 
+    <!-- ========================================== -->
+    <!-- =       Orange palette                   = -->
+    <!-- ========================================== -->
+
+    <color name="md_orange_button_disabled_text">#C76708</color>
+    <color name="md_orange_button_pressed_text">#000000</color>
+    <color name="md_orange_button_normal_text">#FFFFFF</color>
+
+    <color name="md_orange_button_pressed_start">#995C00</color>
+    <color name="md_orange_button_pressed_end">#FF9800</color>
+    <color name="md_orange_button_pressed_border">#4D2E00</color>
+
+    <color name="md_orange_button_disabled_start">#FFE0B2</color>
+    <color name="md_orange_button_disabled_end">#B39D7D</color>
+    <color name="md_orange_button_disabled_border">#FFE0B2</color>
+
+    <color name="md_orange_button_normal_start">#FF9800</color>
+    <color name="md_orange_button_normal_end">#995C00</color>
+    <color name="md_orange_button_normal_border">#4D2E00</color>
+
+    <color name="md_orange_shadow">#85B39D7D</color>
+
+    <!-- ========================================== -->
+    <!-- =       Deep Orange palette              = -->
+    <!-- ========================================== -->
+
+    <color name="md_deeporange_button_disabled_text">#331107</color>
+    <color name="md_deeporange_button_pressed_text">#000000</color>
+    <color name="md_deeporange_button_normal_text">#FFFFFF</color>
+
+    <color name="md_deeporange_button_pressed_start">#B33B17</color>
+    <color name="md_deeporange_button_pressed_end">#FF5722</color>
+    <color name="md_deeporange_button_pressed_border">#802A11</color>
+
+    <color name="md_deeporange_button_disabled_start">#FFCCBC</color>
+    <color name="md_deeporange_button_disabled_end">#B38F84</color>
+    <color name="md_deeporange_button_disabled_border">#FFCCBC</color>
+
+    <color name="md_deeporange_button_normal_start">#FF5722</color>
+    <color name="md_deeporange_button_normal_end">#B33B17</color>
+    <color name="md_deeporange_button_normal_border">#802A11</color>
+
+    <color name="md_deeporange_shadow">#85B38F84</color>
+
+    <!-- ========================================== -->
+    <!-- =       Brown palette                    = -->
+    <!-- ========================================== -->
+
+    <color name="md_brown_button_disabled_text">#382821</color>
+    <color name="md_brown_button_pressed_text">#000000</color>
+    <color name="md_brown_button_normal_text">#FFFFFF</color>
+
+    <color name="md_brown_button_pressed_start">#453129</color>
+    <color name="md_brown_button_pressed_end">#795548</color>
+    <color name="md_brown_button_pressed_border">#382821</color>
+
+    <color name="md_brown_button_disabled_start">#D7CCC8</color>
+    <color name="md_brown_button_disabled_end">#A39B98</color>
+    <color name="md_brown_button_disabled_border">#D7CCC8</color>
+
+    <color name="md_brown_button_normal_start">#795548</color>
+    <color name="md_brown_button_normal_end">#453129</color>
+    <color name="md_brown_button_normal_border">#382821</color>
+
+    <color name="md_brown_shadow">#85A39B98</color>
+
+    <!-- ========================================== -->
+    <!-- =       Grey palette                     = -->
+    <!-- ========================================== -->
+
+    <color name="md_grey_button_disabled_text">#383838</color>
+    <color name="md_grey_button_pressed_text">#000000</color>
+    <color name="md_grey_button_normal_text">#FFFFFF</color>
+
+    <color name="md_grey_button_pressed_start">#525252</color>
+    <color name="md_grey_button_pressed_end">#9E9E9E</color>
+    <color name="md_grey_button_pressed_border">#383838</color>
+
+    <color name="md_grey_button_disabled_start">#727272</color>
+    <color name="md_grey_button_disabled_end">#404040</color>
+    <color name="md_grey_button_disabled_border">#727272</color>
+
+    <color name="md_grey_button_normal_start">#9E9E9E</color>
+    <color name="md_grey_button_normal_end">#525252</color>
+    <color name="md_grey_button_normal_border">#383838</color>
+
+    <color name="md_grey_shadow">#85404040</color>
+
+    <!-- ========================================== -->
+    <!-- =       Blue Grey palette                = -->
+    <!-- ========================================== -->
+
+    <color name="md_bluegrey_button_disabled_text">#1A2226</color>
+    <color name="md_bluegrey_button_pressed_text">#000000</color>
+    <color name="md_bluegrey_button_normal_text">#FFFFFF</color>
+
+    <color name="md_bluegrey_button_pressed_start">#3E5059</color>
+    <color name="md_bluegrey_button_pressed_end">#607D8B</color>
+    <color name="md_bluegrey_button_pressed_border">#1A2226</color>
+
+    <color name="md_bluegrey_button_disabled_start">#CFD8DC</color>
+    <color name="md_bluegrey_button_disabled_end">#6E7375</color>
+    <color name="md_bluegrey_button_disabled_border">#CFD8DC</color>
+
+    <color name="md_bluegrey_button_normal_start">#607D8B</color>
+    <color name="md_bluegrey_button_normal_end">#3E5059</color>
+    <color name="md_bluegrey_button_normal_border">#1A2226</color>
+
+    <color name="md_bluegrey_shadow">#856E7375</color>
+
 </resources>
