--- a/MaterialDesignExample/src/main/res/layout/menu_list_item.xml
+++ b/MaterialDesignExample/src/main/res/layout/menu_list_item.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.gdo.android.library.materialdesign.widget.MDRippleLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/headerlayout"
+    style="@style/MenuItem.Background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
-    android:orientation="horizontal"
-    app:rl_Alpha="0.2"
-    app:rl_Color="#585858"
-    app:rl_Hover="true"
-    app:rl_Overlay="true"
-    style="@style/MenuItem.Background">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/titlemenu"
@@ -21,4 +15,4 @@
         android:layout_alignParentStart="true"
         android:textSize="24sp" />
 
-</ru.gdo.android.library.materialdesign.widget.MDRippleLayout>
+</RelativeLayout>
