--- a/MaterialDesignLibrary/src/main/res/values/styles.xml
+++ b/MaterialDesignLibrary/src/main/res/values/styles.xml
@@ -5,11 +5,14 @@
     <!-- ========================================== -->
 
     <style name="MDButtonStyle" parent="Base.Widget.AppCompat.Button">
-        <item name="android:padding">@dimen/md_button_padding</item>
-        <item name="android:minWidth">@null</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">0sp</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/md_button_padding</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:minWidth">@null</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+
     </style>
 
     <style name="LinearGradientRed" parent="MDButtonStyle">
